@@ -19,6 +19,7 @@ package org.glassfish.tests.embedded.mdb;
 import org.junit.Test;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 /**
@@ -29,7 +30,7 @@ public class MyTest {
 
     @Test
     public void test() throws Exception {
-        URL url = new URL("http://localhost:8080/test/TesterServlet");
+        URL url = URI.create("http://localhost:8080/test/TesterServlet").toURL();
         HttpURLConnection uc = (HttpURLConnection) url.openConnection();
         System.out.println("Test status : " + uc.getResponseMessage());
         if (uc.getResponseCode() != 200) {
