@@ -22,6 +22,7 @@ import jakarta.servlet.ServletRegistration;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.logging.Level;
@@ -78,7 +79,7 @@ public class EmbeddedAddListenerDefaultVSTest {
         sr.addMapping(new String[] {"/myservlet"});
         vs.addContext(context, contextRoot);
 
-        URL servlet = new URL("http://localhost:8080/"+contextRoot+"/myservlet");
+        URL servlet = URI.create("http://localhost:8080/"+contextRoot+"/myservlet").toURL();
         URLConnection yc = servlet.openConnection();
         BufferedReader in = new BufferedReader(
                                 new InputStreamReader(
