@@ -20,6 +20,7 @@ package org.glassfish.tests.embedded.web;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
@@ -114,7 +115,7 @@ public class EmbeddedGetContextsTest {
         }
         assertTrue(containsContext);
 
-        URL servlet = new URL("http://localhost:8080/"+contextRoot+"/hello");
+        URL servlet = URI.create("http://localhost:8080/"+contextRoot+"/hello").toURL();
         URLConnection yc = servlet.openConnection();
         StringBuilder sb = new StringBuilder();
         String inputLine;
