@@ -20,6 +20,7 @@ package org.glassfish.tests.embedded.web;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.logging.Level;
@@ -92,7 +93,7 @@ public class EmbeddedRedeployTest {
     }
 
     private void invoke() throws Exception {
-        URL servlet = new URL("http://localhost:8080/"+contextRoot+"/hello");
+        URL servlet = URI.create("http://localhost:8080/"+contextRoot+"/hello").toURL();
         URLConnection yc = servlet.openConnection();
         try (BufferedReader in = new BufferedReader(new InputStreamReader(yc.getInputStream()))) {
             StringBuilder sb = new StringBuilder();
